<resources>
    <string name="app_name">Sport Stations</string>
    <string name="product">Product</string>
    <string name="product_name">Product Name</string>
    <string name="product_highlight">Product Highlight</string>
    <string name="price">Harga</string>
    <string-array name="data_name_product">
        <item>AERONAUT 6000D</item>
        <item>LI-NING 3D CALIBAR X COMBAT</item>
        <item>MEGA POWER MP5</item>
        <item>LI-NING WINDSTORM 72 S</item>
        <item>LI-NING AXFORCE 80 JR</item>
        <item>LI-NING TECTONIC 1S</item>
        <item>LI-NING WINDSTORM 72</item>
        <item>LI-NING TECTONIC 3R - 4U</item>
        <item>LI-NING AXFORCE 60</item>
        <item>LI-NING AXFORCE 70</item>
    </string-array>
    <string-array name="data_feature_product">
        <item>CASE: Premium Thermal Included\nCOLOR: Black / Lime\nMATERIAL: Commercial Grade Carbon Fiber\nWEIGHT: W3 85–89 grams\nGRIP SIZE: S2, Small 3 ¼"/82.6mm\nOVERALL LENGTH: 675mm\nGRIP LENGTH: 200mm\nBALANCE POINT: 290mm\nFLEX: Flexible\nTENSION: Vertical 24–28 lbs, Horizontal 28–30 lbs</item>
        <item>Frame Shape: Dynamic Optimum Frame\nWeight: 85 grams\nBalance Point: 302mm\nBalance: Head Heavy\nShaft Flexibility: Flexible\nShaft Thickness (mm): 7\nRacket Grip Size: S1\nMaximum Racket Tension: 30 LBS (pounds)\nMaterial: Carbon Fibre</item>
        <item>Frame Shape: Dynamic Optimum Frame\nWeight: 95 grams\nBalance Point: 296 mm\nBalance: Head Heavy\nShaft Flexibility: Flexible\nRacket Grip Size: S1\nMaximum Racket Tension: 25 LBS (pounds)\nMaterial: Aluminium</item>
        <item>Frame Shape: Dynamic Optimum Frame\nWeight: 72 grams\nBalance Point: 315 mm\nBalance: Head Heavy\nShaft Flexibility: Flexible\nRacket Grip Size: S1\nMaximum Racket Tension: 30 LBS (pounds)\nMaterial: Carbon Fibre</item>
        <item>Frame Shape: Dynamic Optimum Frame\nWeight: 80 grams\nBalance Point: 304 mm\nBalance: Head Heavy\nShaft Flexibility: Flexible\nShaft Thickness (mm): 6.8\nRacket Grip Size: G6\nMaximum Racket Tension: 27 LBS (pounds)\nMaterial: Carbon Fibre</item>
        <item>Frame Shape: Dynamic Optimum Frame\nWeight: 83 grams\nBalance Point: 301 mm\nBalance: Head Heavy\nShaft Flexibility: Flexible\nRacket Grip Size: G6\nMaximum Racket Tension: 26 LBS (pounds)\nMaterial: Carbon Fibre</item>
        <item>Frame Shape: Dynamic Optimum Frame\nWeight: 72 grams\nBalance Point: 315 mm\nBalance: Head Heavy\nShaft Flexibility: Flexible\nRacket Grip Size: S1\nMaximum Racket Tension: 30 LBS (pounds)\nMaterial: Carbon Fibre</item>
        <item>Frame Shape: Dynamic Optimum Frame\nWeight: 83 grams\nBalance Point: 310 mm\nBalance: Head Heavy\nShaft Flexibility: Flexible\nRacket Grip Size: G5\nMaximum Racket Tension: 30 LBS (pounds)\nMaterial: Carbon Fibre</item>
        <item>Material: Carbon Fiber\nBalance: Head Heavy\nFlexibility: Flexible\nWeight: 4U | 5U\nString Tension: ≤30lbs (4U) | ≤29lbs (5U)\nGrip Size: G5 (4U) | G6 (5U)\nTech:\n6.8mm Shaft\nTB NANO + Super Carbon\nFRTP Technology\nHDF Shock Absorption System</item>
        <item>Material: Carbon Fiber + M40X\nBalance: Head Heavy\nFlexibility: Medium (4U) | Flexible (5U)\nWeight: 4U | 5U\nString Tension: ≤30lbs (4U) | ≤29lbs (5U)\nGrip Size: G5 (4U) | G6 (5U)\nTech:\n6.6mm Shaft\nM40X + TB NANO + Super Carbon\nFRTP Technology\nHDF Shock Absorption System</item>
    </string-array>
    <string-array name="data_number_produce">
        <item>227563</item>
        <item>241117</item>
        <item>238740</item>
        <item>242357</item>
        <item>259323</item>
        <item>263984</item>
        <item>268993</item>
        <item>264849</item>
        <item>288296</item>
        <item>288295</item>
    </string-array>
    <string name="aeronaut_600d">CASE: Premium Thermal Included\nCOLOR: Black / Lime\nMATERIAL: Commercial Grade Carbon Fiber\nWEIGHT: W3 85–89 grams\nGRIP SIZE: S2, Small 3 ¼"/82.6mm\nOVERALL LENGTH: 675mm\nGRIP LENGTH: 200mm\nBALANCE POINT: 290mm\nFLEX: Flexible\nTENSION: Vertical 24–28 lbs, Horizontal 28–30 lbs</string>
    <string-array name="data_price_product">
        <item>Rp1,813,560.31</item>
        <item>Rp1,975,132.05</item>
        <item>Rp260,493.21</item>
        <item>Rp2,304,870.29</item>
        <item>Rp1,645,393.81</item>
        <item>Rp1,315,655.57</item>
        <item>Rp2,172,974.99</item>
        <item>Rp1,315,655.57</item>
        <item>Rp2,634,608.53</item>
        <item>Rp3,294,085.00</item>
    </string-array>
    <string-array name="data_highlight_product">
        <item>The AERONAUT 6000D badminton racket is built on the Aeronaut Technology Platform that has a unique air-stream channel integrated into the racket head. This reduces air resistance which helps to generate faster shuttlecock speeds. It’s suitable for players looking for the best control with little to no sacrifice in power.</item>
        <item>The Li-Ning 3D Calibar X Combat badminton uses the 3D Calibar Technology and features a high-tech geometric frame design that greatly reduces air resistance. It provides you with higher swing speeds for stronger smashes and best-suits players who rely on peak power in their gameplay. The racket has been engineered to perfection by devising TB Nano, Aerotec Beam System, MPCF Reinforcing technologies. This is a COMBAT Series racket featuring a heavier head and higher balance point. It is a perfect match for players who swear by their aggressive gameplay and want absolute power domination.</item>
        <item>The Li-Ning Mega Power is a gun racket for all badminton lovers. Engineered with a Smash Power Frame and High Tech Slim Shaft, this racket improves your hitting velocity considerably and balances the rebound and anti-torsion performance. This is a head-heavy racket with a bigger sweet spot to enable you to smash and defend seamlessly.</item>
        <item>When you think of lightweight rackets, the Li-Ning Windstorm 72S is the stellar winner. Windstorm technology delivers an ultalite 72g racket frame giving you optimised speed and control. The racket also features a head-heavy balance with the frame weight more concentrated towards the racket head to enhance your swing power. The flexible shaft offers faster swing speeds to improve your reaction time significantly and make you unstoppable on the court.</item>
        <item>The Li-Ning AXFORCE 20 is a prime attackers racket made for those who love to flex their weapon like a chief warrior in full swing. This ballistic racket has a head-heavy profile and dons a 6.8mm soft flexible shaft. The racket is further enhanced for peak performance with the technical features of Li-Ning technologies of Box Wing Frame, Sonic Boom System and High Carbon Material technology. This racket is the perfect comrade for players who are a big fan of smashing and who often fire attacks from the rear court.</item>
        <item>The Li-Ning Tectonic 1S is crafted for the ultimate swift strokes with technology devised for strength and stability. Discover a supreme combat weapon for bold attacks and raging defences. The 7mm soft flexible shaft gives you the elastic ability to retain shape and control at every strike for ultra movement precision.</item>
        <item>The Windstorm 72 badminton racket is part of the Extra Skill Series and is a LIGHTWEIGHT racket for players with FAST RACKET SPEED and QUICK HANDS. Dynamic Optimum Frame is a high-tech badminton racket frame technology that delivers exceptional offensive and defensive play characteristics and includes an enlarged sweet spot for high repulsion performance.</item>
        <item>The Li-Ning Tectonic 3R is the Rex speed series badminton racket. This relentless rager features a flexible frame that absorbs potential rebound energy and doubles acceleration power. With its Wing stabilizer Technology and TB Nano carbon fibre frame, the overall strength, stability and striking precision are improved while simultaneously suppressing turbulence.</item>
        <item>Elevate your performance on the court with the supremely engineered super carbon racket AxForce 60. Its Box Wing frame reduces air drag and boosts power for more efficient strikes. The ultra-slim 6.8mm soft flexible shaft aids in better defense and precise shots. Li-Ning Wing Stabilizer System improves motion stability and helps with a quick, exact, and stable second stroke.</item>
        <item>Introducing the LI-NING AXFORCE 70 badminton racquet - a perfect blend of power and precision. Designed in sleek black and silver, this racquet is visually stunning and engineered for top performance. Experience unrivalled control and accuracy on the court with the AXFORCE 70s advanced technology</item>
    </string-array>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="product_number_default">Product Number: -</string>
</resources>